[tool.poetry]
name = "st"
version = "0.1.0"
description = ""
authors = ["seungwonme <seungwonan.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
langchain = "^0.3.12"
langchain-ollama = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
